--- a/css/projects.css
+++ b/css/projects.css
@@ -3,6 +3,13 @@
   
 }
 
+.title {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.3;
+  text-align: center;
+}
+
 .title-1 {
   font-size: 60px;
   font-weight: 700;
@@ -10,6 +17,15 @@
   color: var(--accent);
   text-align: center;
   margin-bottom: 60px;
+}
+
+.title-2 {
+  margin-bottom: 20px;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.3;
+  text-align: center;
+  color: var(--accent);
 }
 
 .projects {
@@ -37,4 +53,52 @@
   font-size: 24px;
   line-height: 1.3;
   color: var(--black);
+}
+
+/* project details */
+
+.project__details {
+  max-width: 865px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.project__details-cover {
+  max-width: 100%;
+  margin-bottom: 40px;
+  box-shadow: 0px 5px 36px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+
+}
+
+.project__details-desc {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.3;
+  margin-bottom: 30px;
+}
+
+/* Content list*/
+
+.content__list {
+  max-width: 570px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  row-gap: 40px;
+  margin: 0 auto;
+}
+
+.content__list-item {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.content__list-item p {
+  margin-top: 0.5em;
+  font-size: 18px;
 }
