--- a/css/footer.css
+++ b/css/footer.css
@@ -2,6 +2,7 @@
   padding: 60px 0 50px;
   background-color: var(--dark-bg);
   color: var(--header-text);
+  margin-top: auto;
 }
 
 .footer__wrapper {
@@ -17,4 +18,26 @@
   justify-content: space-between;
   align-items: center;
   column-gap: 30px;
+}
+
+/* media */
+
+@media (max-width: 620px) {
+ .footer {
+  padding: 40px 0 30px;
+ }
+
+ .footer__wrapper {
+  row-gap: 20px;
+ }
+
+ /* .social {
+  column-gap: 20px;
+ } */
+
+ .social__item {
+  width: 26px;
+ }
+
+
 }
