--- a/css/projects.css
+++ b/css/projects.css
@@ -1,6 +1,5 @@
 .section {
   padding: 70px 0;
-  
 }
 
 .title {
@@ -30,6 +29,7 @@
 
 .projects {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 30px;
 
@@ -38,9 +38,10 @@
 
 .project {
   max-width: 370px;
-  background-color: var(--white);
-  box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
+  background-color: var(--project-card-bg);
+  box-shadow: var(--box-shadow);
   border-radius: 10px;
+
 }
 
 .project__img {
@@ -52,7 +53,7 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 1.3;
-  color: var(--black);
+  color: var(--project-card-text);
 }
 
 /* project details */
@@ -93,12 +94,50 @@
   margin: 0 auto;
 }
 
+.content__list a {
+  color: var(--accent);
+}
+
 .content__list-item {
   font-size: 18px;
   line-height: 1.5;
 }
 
-.content__list-item p {
+.content__list-item p + p{
   margin-top: 0.5em;
   font-size: 18px;
+}
+
+/* media */
+
+@media (max-width: 620px) {
+  .section{
+    padding: 40px 0;
+  }
+
+  .title-1 {
+    margin-bottom: 30px;
+    font-size: 40px;
+  }
+
+  .title-2 {
+    margin-bottom: 10px;
+    font-size: 30px;
+  }
+
+  .project__title {
+    font-size: 22px;
+  }
+
+  .project__details-desc {
+    font-size: 20px;
+    margin-bottom: 30px;
+  }
+  .content__list {
+    row-gap: 20px;
+  }
+
+  .content__list-item {
+    font-size: 16px;
+  }
 }
